--- a/index.html
+++ b/index.html
@@ -1,11 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>nytimes-weekly-assessment-week-4.git</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-  
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        New York Times
+      </div>
+    </div>
+  </div>
+  <nav class="navbar navbar-expand-sm navbar-light bg-light justify-content-end">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#pageNavigation"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="pageNavigation">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <button class="btn btn-light" id="home">HOME</button>
+        </li>
+        <li class="nav-item">
+          <button class="btn btn-light" id="world">WORLD </button>
+        </li>
+        <li class="nav-item">
+          <button class="btn btn-light">POLITICS</button>
+        </li>
+        <li class="nav-item">
+          <button class="btn btn-light">MAGAZINE</button>
+        </li>
+        <li class="nav-item">
+          <button class="btn btn-light">TECHNOLOGY</button>
+        </li>
+        <li class="nav-item">
+          <button class="btn btn-light">SCIENCE</button>
+        </li>
+        <li class="nav-item">
+          <button class="btn btn-light">HEALTH</button>
+        </li>
+        <li class="nav-item">
+          <button class="btn btn-light">SPORTS</button>
+        </li>
+        <li class="nav-item">
+          <button class="btn btn-light">ARTS</button>
+        </li>
+        <li class="nav-item">
+          <button class="btn btn-light">FASHION</button>
+        </li>
+        <li class="nav-item">
+          <button class="btn btn-light">FOOD</button>
+        </li>
+        <li class="nav-item">
+          <button class="btn btn-light">TRAVEL</button>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <div class="container mt-3">
+    <div class="row">
+      <div class="col-lg-12" style="border: 2px dotted green;" id="columnHome">
+        
+      </div>
+    </div>
+  </div>
+
+
+
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
+  </script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+  </script>
+  <script type="module" src="script.js"></script>
 </body>
+
 </html>
